@@ -188,6 +188,9 @@ ws_sender_chunk = 4096
 /* Maximal sendable data size */
 ws_send_max = 102400
 
+/* Print detailed request flow */
+detailed_log = 1
+
 [Other]
 
 /* Colored terminal output(1/0) */
