@@ -64,10 +64,17 @@ namespace http
 				int fs = http::bsd::findfreesock();
 				if (fs == -1)
 				{
+#ifdef NHDBG
+                    if(http::log_detailed)nativehttp::server::log("DETAIL@bsdListen","Could not assing user to id");
+#endif
 					close(tmp);
 					utils::sleep(10);
 					continue;
 				}
+
+#ifdef NHDBG
+                    if(http::log_detailed)nativehttp::server::log("DETAIL@bsdListen","New connection, assigned to "+nativehttp::data::superstring::str_from_int(fs));
+#endif
 				http::connected[fs] = tmp;
 				http::client_protocol[fs] = CLPROT_HTTP;
 				http::client_ips[fs] = sock_addr.sin_addr.s_addr;
