@@ -83,6 +83,9 @@ namespace http
 						{
                             if(http::client_protocol[i] == CLPROT_HTTP)
                             {
+#ifdef NHDBG
+                                if(http::log_detailed)nativehttp::server::log("DETAIL@bsdRecv","Recieved data for HTTP module: "+nativehttp::data::superstring::str_from_int(i));
+#endif
                                 http::request *trq = new http::request();
                                 trq->request = rqbuf;
                                 rqbuf = NULL; //Do not ever think about freeing this here
@@ -102,6 +105,9 @@ namespace http
                             }
                             else
                             {
+#ifdef NHDBG
+                                if(http::log_detailed)nativehttp::server::log("DETAIL@bsdRecv","Recieved data for WebSocket module: "+nativehttp::data::superstring::str_from_int(i));
+#endif
                                 http::statdata::onrecv(ra);
                                 ws::rcv_push((unsigned char*)rqbuf, ra, i);
                                 rqbuf = NULL;
@@ -110,6 +116,9 @@ namespace http
 						else
 						{
 							http::bsd::disconnect(i);
+#ifdef NHDBG
+                            if(http::log_detailed)nativehttp::server::log("DETAIL@bsdRecv","User disconnected: "+nativehttp::data::superstring::str_from_int(i));
+#endif
 						}
 
 					}
