@@ -5,6 +5,7 @@ DEV:
 -NativeStat - more info on diagrams
 -Better thearding
 -Makefile repaired
+-Detailed logging option
 
 0108.13:
 -Stats - Multiple bugs fixed
